# LoginFastapi

./: .env.dev  .env.prod  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py  test.db
app/: main.py
app/agent/: dependencies.py  state.py
app/agent/edges/: conditional.py
app/agent/function/: tavily_web_search.py
app/agent/graphs/: base.py  searching_rag.py
app/agent/llm/: factory.py
app/agent/nodes/: generator.py  grader.py  retrieval.py  rewriter.py  searcher.py
app/agent/persistance/: agent_config.py  client.py
app/agent/tools/: __init__.py  ask_human.py  web_search.py
app/api/v1/: api.py
app/core/: config.py  logging.py
app/core/storage/: client.py  fileStorage.py
app/db/: __init__.py  chroma_db.py  session.py
app/ingestion/: __init__.py
app/ingestion/loaders/: base_loader.py  md_loader.py
app/middleware/: request_logger.py
app/models/: __init__.py  asistantKnowledgeBase.py  asistantMessage.py  document.py  user.py  user_collection.py  version.py
app/rag/: pipelines.py  retriever.py
app/rag/chains/: __init__.py  condense_question_chain.py  grade_source_chain.py  qa_prompt_chain.py
app/rag/cleaning/: data_cleaning.py
app/rag/embeddings/: embedding_factory.py
app/rag/loaders/: base_loader.py  pdf_loader.py
app/rag/prompts/: __init__.py  condense_question_prompt.py  qa_prompt.py  (+1 more)
app/schemas/: __init__.py  chats.py  chroma.py  documents.py  knowledgeBases.py  user.py  user_collection.py  users.py  versions.py
app/services/: __init__.py  chroma_service.py  chunker.py  jwtService.py  vectorService.py
app/utils/: __init__.py  network.py  token_counter.py
app/vectorstore/: StoreIndexer.py  __init__.py  collection_manager.py  store.py
app/workers/: celery_logging.py
backup_notes/: chroma.py
(+9 files in other folders)
